# Spike-Recorder-Cross-Platform

./: README.md  describe.sh  flutter_project.txt  pubspec.yaml
android/: build.gradle
android/app/: build.gradle
assets/: default_config.json  libopus.js  recordwithsoftware.txt
embedded/escape_sequence_test/: escape_sequence_test.ino
embedded/muscle-spikershield_230400_14bit_2Ch/: muscle-spikershield_230400_14bit_2Ch.ino
embedded/muscle_spikershield_230400_14bit_1ch/: muscle_spikershield_230400_14bit_1ch.ino
ios/: Podfile
lib/: main.dart  message_identifier.dart
linux/: CMakeLists.txt  my_application.cc
native_implementation/pluggins/native_add/src/: CMakeLists.txt  MyAudioSInk.h  MyAudioSink.cpp  capture_audio.cpp  capture_audio.h  envelope.cpp  envelope.h  filter_base.cpp  filter_base.h  filter_util.cpp  filter_util.h  high_pass_filter.cpp  high_pass_filter.h  low_pass_filter.cpp  low_pass_filter.h  mac_audio_sink.cpp  mac_capture_audio.cpp  notch_filter.cpp  notch_filter.h  sample_buffer.cpp  sample_buffer.h  timing_debug.cpp  timing_debug.h
test/: widget_test.dart
web/: a.out.js  a.out.wasm  audio_processor.js  envelop.h  envelope.cpp  filter_base.cpp  filter_base.h  high_pass_filter.cpp  index.html  index.js  low_pass_filter.cpp  main_entry_file.cpp  manifest.json  microphone_util.js  native_add.cpp  native_add.js  notch_filter.cpp  sample_buffer.cpp  worker6788.dart  workerSimulation.js
windows/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  install_manifest.txt  spikerbox_architecture.sln
(+270 files in other folders)
